# Mythos

./: .gitignore  ARCHITECTURE.md  HOW_TO_RUN.md  HOW_TO_SHARE.md  INSTALLATION_GUIDE.md  Instructions.md  LICENSE  MANIFEST.in  PKG-INFO  PROJECT_OVERVIEW.md  PUBLISH_TO_PYPI.md  QUICKSTART.md  SUMMARY.md  WHAT_YOU_BUILT.md  __init__.py  behavior_tree.py  camera.py  cli.py  command-reference.md  compiler.py  game_2d.mythos  game_3d.mythos  getting-started.md  hello_world.mythos  http_server.py  install.bat  install.sh  language-reference.md  lexer.py  math_demo.mythos  my_program.mythos  parser.py  pyproject.toml  requirements.txt  scene.py  setup.py  simple_test.mythos  test_installation.py  test_math.mythos  top_level.txt  (+2 more)
compiler/: __init__.py
compiler/ast/: nodes.py
compiler/bytecode/: __init__.py
compiler/lexer/: __init__.py
compiler/parser/: __init__.py
engine/: __init__.py
engine/2d/: __init__.py  sprite.py
engine/3d/: __init__.py
engine/rendering/: __init__.py  renderer.py
engine/scene/: __init__.py
examples/: calculator.mythos  working_demo.mythos
mythos_cli/: __init__.py
mythos_lang.egg-info/: SOURCES.txt  entry_points.txt
runtime/: __init__.py
standard_library/: __init__.py
standard_library/ai/: pathfinding.py
standard_library/math/: __init__.py  core.py  physics.py
tests/: test_lexer.py
tools/: __init__.py  debugger.py
web/: __init__.py
web/frontend/: __init__.py  ui.py
web/server/: __init__.py
