[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mythos-lang"
version = "1.0.0"
description = "A powerful, beginner-friendly programming language"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mythos Team", email = "team@mythos-lang.org"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Compilers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.scripts]
mythos = "mythos_cli.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/mythos"
Documentation = "https://github.com/yourusername/mythos"
Repository = "https://github.com/yourusername/mythos"
